Fixed symbol overflow when length < 5

--- a/src/cryptoapp.css
+++ b/src/cryptoapp.css
@@ -39,6 +39,10 @@
     width:15%;
     font-size:150%;
 }
+.coin-symbol-small{
+    width:15%;
+    font-size:100%;
+}
 .coin-data{
     display: flex;
     text-align: center;
